force-app/main/default/objects/SiebelDatiCatastali__x/SiebelDatiCatastali__x.object-meta.xml
<CustomObject>
    <description>SiebelDatiCatastali</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelDatiCatastali</externalName>
    <label>Dato Catastale Siebel</label>
    <pluralLabel>Dati Catastali Siebel</pluralLabel>
</CustomObject>