force-app/main/default/objects/SiebelDatiCatastali__x/fields/CATEGORIA_CATASTALE__c.field-meta.xml
<CustomField>
    <fullName>CATEGORIA_CATASTALE__c</fullName>
    <label>Categoria Catastale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>