force-app/main/default/objects/SiebelDatiCatastali__x/fields/CODICE_COMUNE_CATASTALE__c.field-meta.xml
<CustomField>
    <fullName>CODICE_COMUNE_CATASTALE__c</fullName>
    <label>Codice Comune Catastale</label>
    <length>5</length>
    <type>Text</type>
</CustomField>