force-app/main/default/objects/SiebelDatiCatastali__x/fields/FLAG_GESTITO_HERA__c.field-meta.xml
<CustomField>
    <fullName>FLAG_GESTITO_HERA__c</fullName>
    <label>Comune Gestito</label>
    <length>1</length>
    <type>Text</type>
</CustomField>