force-app/main/default/objects/SiebelDatiCatastali__x/fields/FOGLIO__c.field-meta.xml
<CustomField>
    <fullName>FOGLIO__c</fullName>
    <label>Foglio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>