force-app/main/default/objects/SiebelDatiCatastali__x/fields/ID_LINE_ITEM__c.field-meta.xml
<CustomField>
    <fullName>ID_LINE_ITEM__c</fullName>
    <label>Id Riga Ordine</label>
    <length>15</length>
    <referenceTo>SiebelRdo__x</referenceTo>
    <relationshipLabel>Dati Catastali</relationshipLabel>
    <relationshipName>DatiCatastali</relationshipName>
    <type>ExternalLookup</type>
</CustomField>