force-app/main/default/objects/SiebelDatiCatastali__x/fields/PARTICELLA__c.field-meta.xml
<CustomField>
    <fullName>PARTICELLA__c</fullName>
    <label>Particella</label>
    <length>5</length>
    <type>Text</type>
</CustomField>