force-app/main/default/objects/SiebelDatiCatastali__x/fields/PARTICELLA_TAVOLARE__c.field-meta.xml
<CustomField>
    <fullName>PARTICELLA_TAVOLARE__c</fullName>
    <label>Particella Tavolare</label>
    <length>10</length>
    <type>Text</type>
</CustomField>