force-app/main/default/objects/SiebelDatiCatastali__x/fields/QUALIFICA_TITOLARE__c.field-meta.xml
<CustomField>
    <fullName>QUALIFICA_TITOLARE__c</fullName>
    <label>Qualifica Titolare</label>
    <length>30</length>
    <type>Text</type>
</CustomField>