force-app/main/default/objects/SiebelDatiCatastali__x/fields/SUBALTERNO__c.field-meta.xml
<CustomField>
    <fullName>SUBALTERNO__c</fullName>
    <label>Subalterno</label>
    <length>4</length>
    <type>Text</type>
</CustomField>