force-app/main/default/objects/SiebelDatiCatastali__x/fields/SUPERFICIE_DETTAGLIO__c.field-meta.xml
<CustomField>
    <fullName>SUPERFICIE_DETTAGLIO__c</fullName>
    <label>Superficie Dettaglio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>